--- a/package.json
+++ b/package.json
@@ -16,19 +16,14 @@
     "babel-plugin-styled-components": "^1.11.1",
     "confetti-js": "0.0.18",
     "framer-motion": "^2.3.0",
-    "helmet": "^3.23.3",
     "mongoose": "^5.10.3",
-    "multer": "^1.4.2",
-    "multer-gridfs-storage": "^4.2.0",
     "next": "^9.5.0",
-    "next-connect": "^0.9.0",
     "next-images": "^1.4.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-icons": "^3.10.0",
     "styled-components": "^5.1.1",
-    "styled-theming": "^2.2.0",
-    "ts-node": "^9.0.0"
+    "styled-theming": "^2.2.0"
   },
   "devDependencies": {
     "@types/eslint": "^7.2.2",
@@ -42,6 +37,5 @@
     "eslint": "^7.7.0",
     "prettier": "^2.1.1",
     "typescript": "^4.0.2"
-  },
-  "type": "module"
+  }
 }
