--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
   "license": "ISC",
   "dependencies": {
     "babel-plugin-styled-components": "^1.11.1",
+    "bcrypt": "^5.0.0",
     "confetti-js": "0.0.18",
     "framer-motion": "^2.3.0",
     "mongoose": "^5.10.3",
+    "multer": "^1.4.2",
     "next": "^9.5.0",
     "next-images": "^1.4.0",
     "react": "^16.13.1",
